--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>RGB 3D Scatter Plot</title>
-  <script type="text/javascript" src="https://unpkg.com/vis-graph3d@latest/standalone/umd/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="vis.js"></script>
   <script type="text/javascript" src="script.js" defer></script>
   <link rel="stylesheet" href="style.css">
 </head>
