--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <html>
 <head>
   <title>RGB 3D Scatter Plot</title>
-  <script type="text/javascript" src="vis.js"></script>
-  <script type="text/javascript" src="script.js" defer></script>
+  <!-- vis-graph3d の正しいCDN読み込み -->
+  <script src="https://unpkg.com/vis-graph3d@latest/standalone/umd/vis-graph3d.min.js"></script>
+  
+  <!-- あなたの描画スクリプト -->
+  <script src="script.js" defer></script>
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
