--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>RGB 3D Scatter Plot</title>
 
-  <!-- vis.js を一番先に読み込む！！ -->
+  <!-- vis.js を先に読み込む！ -->
   <script src="https://unpkg.com/vis-graph3d@latest/standalone/umd/vis-graph3d.min.js"></script>
 
-  <!-- あなたのスクリプト（defer付きでOK） -->
+  <!-- あなたのコード -->
   <script src="script.js" defer></script>
 
   <link rel="stylesheet" href="style.css">
